--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -24,22 +24,13 @@
 }
 
 .btn--primary{
-	background: linear-gradient(270deg,#f06449,#ef3636);
-	
-	&:hover{
-		.btn-before{ 
-		opacity: 1;
-		visibility: visible;
-		transform: translateX(-90%);
-		transition: all ease .5s;
-		}
-		&:after{
-			opacity: 1;
-			visibility: visible;
-			transform: translateX(100%);
-			transition: all ease .5s;
-		}
-	}
+	padding-left: 0 !important; 
+	font-family: 'Poppins', sans-serif;
+	font-weight: 700;
+	font-size: 2.3rem;  
+	background: -webkit-linear-gradient(270deg,#f06449,#ef3636);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 
 }
 
@@ -49,11 +40,3 @@
 }
 
 
-.btn-before{
-	opacity: 0; visibility: hidden;
-	transform: rotateZ(30deg) translateX(0%);
-	height: 50rem; width: 20px;
-	background-color: #101b3b;
-	z-index: 6;
-	position: absolute; top: -50%; left:0; 
-}
