--- a/sass/components/_modals.scss
+++ b/sass/components/_modals.scss
@@ -91,10 +91,6 @@
 				font-weight: 700;
 				opacity: .1;   
 			}
-
-		}
-		.bg--dark, .bg--white{
-			
 		}
 		.bg--dark{
 			background-color:  rgba(28,29,37,.985);
@@ -129,11 +125,12 @@
 					background-color: transparent;
 					border: none; outline: none;
 					border-bottom: 2px solid silver;
+					padding: 8px 5px;
 					color: $color-text;
 					font-size: 1.2rem;
-					padding: 8px 5px;
 					font-weight: 300;
-					font-family: 'Poppins', sans-serif; 
+					font-family: 'Poppins', sans-serif;
+					z-index: 6;  
 					letter-spacing: 2px; 
 					transition: all ease-in .5s;
 					
